{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "304132c3-c110-4f04-8abb-a805544b926b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4b6e5ee6-6b9d-4dc9-9eac-234d2d27747b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0efe5e27-099e-44de-a467-97386801db9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "12524568-99de-4eab-9428-017767742586",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df34bcc9-a7a4-41bf-bc5a-6488787c1a6a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cbffa9c-3010-4b1d-b74b-ca922603e174",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a7c12f6-3e98-4e28-b29b-04e2003c3d51",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}